--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="plusSign">+</string>
     <string name="zero">0</string>
     <string name="doubleZero">0.00</string>
+    <string name="dollarSign">$</string>
 </resources>
